# CLanguage101

./: .clang-format  .gitignore  BigInteger.c  CMakeLists.txt  Palindrome.c  aep.c  candy.c  getchar.c  hw.c  maxsort.c  maxsort1.c
DataStruct/Task_1/: CMakeLists.txt
DataStruct/Task_1/1.2/: SeqList.c  SeqList.h  SeqMain.c
DataStruct/Task_1/2.2/: SeqStack.c  SeqStack.h  StackMain.c
DataStruct/Task_1/3.2/: StaticString.c  StaticString.h
DataStruct/Task_1/4.2/: ADT_List.h  Poly.h  t.c
DataStruct/Task_1/5.2/: MatrixGraph.c  MatrixGraph.h
DataStruct/Task_1/6.2/: datastruct.c  datastruct.h
DataStruct/Task_1/7.2/: sort.c
DataStruct/Task_2/: hf.cpp
DataStruct/Task_3/: part.cpp
